# Grouding-FoundationPose

./: .gitignore  MANUALOP_README.md  MISSIONOP_README.md  README.md
connector_pose_estimation/: README.md  package.xml  setup.cfg  setup.py
connector_pose_estimation/launch/: mission_launch.py  pose_estimator_launch.py
connector_pose_estimation/pose_src/: ROS_comm.py  ROS_mission.py  Utils.py  build_all_conda.sh
connector_semantic_segment/: README.md  package.xml  setup.cfg  setup.py
connector_semantic_segment/launch/: mission_launch.py  semantic_segmentor_launch.py
connector_semantic_segment/segment_src/: ROS_comm.py  ROS_mission.py  setup.py
connector_semantic_segment/segment_src/sam2/: build_sam.py
realsense-ros-4.51.1/realsense2_camera/launch/: rs_launch.py
realsense_manage/: README.md  package.xml  setup.cfg  setup.py
realsense_manage/launch/: rs_multi_camera_mission_launch.py
realsense_manage/realsense_manage_src/: ROS_DPT.py
